<resources>
    <string name="app_name">Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="click_intro">Opens the app </string>
    <string name="spotify_title">Spotify Streamer</string>
    <string name="scores_title">Scores App</string>
    <string name="library_title">Library App</string>
    <string name="build_bigger_title">Build It Bigger</string>
    <string name="xyz_title">XYZ Reader</string>
    <string name="capstone_title">Capstone: My Own App</string>
</resources>
