<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PortfolioActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/spotifyButton"
            android:text="@string/spotify_title"
            style="@style/udacity_projects" />

        <Button
            android:id="@+id/scoresAppButton"
            android:text="@string/scores_title"
            style="@style/udacity_projects_padding" />

        <Button
            android:id="@+id/libraryAppButton"
            android:text="@string/library_title"
            style="@style/udacity_projects" />

        <Button
            android:id="@+id/buildBiggerButton"
            android:text="@string/build_bigger_title"
            style="@style/udacity_projects_padding" />

        <Button
            android:id="@+id/xyzButton"
            android:text="@string/xyz_title"
            style="@style/udacity_projects"
            />

        <Button
            android:onClick="displayToast"
            android:layout_marginTop="10dp"
            android:padding="16dp"
            android:id="@+id/myOwnAppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/capstone_title"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>
